// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services/codeWriter should create file with adapter 1`] = `
"import { createAdapter } from '@kottster/server';

const adapter = createAdapter(
    'postgresql', 
    {
      connectionOptions: {
        connection: {
          host: 'localhost',
          port: 5432,
          user: 'root',
          password: 'password123',
          database: 'postgres'
        },
        searchPath: [
          'public'
        ]
      }
    }
  );export default adapter;

"
`;

exports[`services/codeWriter should create file with procedures 1`] = `
"// This file was generated by the Kottster App Builder
// PLEASE AVOID EDITING THIS FILE MANUALLY

import { app } from '../../app.js';

app.registerProcedureForComponent('dev', 'p1', 'metric', 'm1', 'getUserCount', async function () {return { userCount: 123 };});

"
`;

exports[`services/codeWriter should generate autoimports 1`] = `
"// This file was generated by the Kottster App Builder
// PLEASE AVOID EDITING THIS FILE MANUALLY

import './dev/procedures.js';
"
`;
